# paramguard

./: Cargo.toml  README.md
paramguard-cli/: Cargo.toml  paramguard.db
paramguard-cli/src/: cli.rs  display.rs  main.rs  tui.rs
paramguard-cli/src/args/: archiveargs.rs  configargs.rs  envargs.rs  mod.rs
paramguard-cli/src/commands/: archive.rs  config.rs  mod.rs
paramguard-cli/src/logic/: cli_logic.rs  mod.rs  tui_logic.rs
paramguard-cli/src/tui/: mod.rs  terminal.rs  tui_logic.rs
paramguard-cli/src/tui/components/editor/: mod.rs  syntax_highlighting.rs
paramguard-cli/src/tui/components/editor/features/: syntax_highlighting.rs
paramguard-cli/src/tui/display/: mod.rs
paramguard-cli/src/tui/screens/: archive_screen.rs  mod.rs
paramguard-core/: Cargo.toml
paramguard-core/src/: lib.rs
paramguard-core/src/archive/: db.rs  error.rs  interface.rs  mod.rs
paramguard-core/src/archive/interface/: display.rs  mod.rs
paramguard-core/src/config/: error.rs  manager.rs  mod.rs  types.rs
paramguard-core/src/config/tests/: mod.rs
paramguard-core/src/logic/: config_logic.rs  env_logic.rs  mod.rs
paramguard-core/src/tracked/: mod.rs  tracked_db.rs
paramguard-gui/: Cargo.toml
