[package]
name = "paramguard-core"
version = "0.1.0"
edition = "2021"
authors = ["Bryan Hyland <bryan.hyland32@gmail.com>"]
description = "The core functionality for the ParamGuard CLI and GUI applications."

[dependencies]
chrono = { version = "0.4.39", features = ["serde"] }
rusqlite = { version = "0.33.0", features = ["bundled"] }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.137"
serde_yaml_ng = "0.10.0"
sha2 = "0.10.8"
tempfile = "3.15.0"
thiserror = "2.0.11"
toml = "0.8.19"
